<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/EditTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="60dp"
        android:background="#00BCD4"
        android:backgroundTint="#D32E2E"
        android:backgroundTintMode="add"
        android:onClick="login"
        android:text="@string/log_in"
        android:textColorLink="#C84B4B"
        app:cornerRadius="10dp"
        app:icon="@android:drawable/ic_menu_send"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="#00BCD4"
        android:backgroundTint="#D32E2E"
        android:backgroundTintMode="add"
        android:text="@string/sign_in"
        android:textColorLink="#C84B4B"
        app:cornerRadius="10dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_ou_senha_incorreto"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>